# ServerIOT

./: README.md  pyproject.toml
demo/: .env
demo/api/: urls.py
demo/api/serializers/: serializers.py
demo/api/views/: views.py
demo/demo/: __init__.py  admin.py  mqtt.py  urls.py
demo/demo/settings/: defaults.py
demo/smart_home/: admin.py  models.py  tasks.py
